apps/kiali-operator/overlays/ops/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: kiali-operator
  labels:
    app: kiali
  annotations:
    link.argocd.argoproj.io/external-link: https://kiali.unset-127-0-0-1.nip.io # kpt-set: https://kiali.${host}
spec:
  gateways:
    - istio-system/istio-ingressgateway
  hosts:
    - "kiali.unset-127-0-0-1.nip.io" # kpt-set: kiali.${host}
  http:
    - headers:
        request:
          set:
            X-Forwarded-Port: "443"
      route:
        - destination:
            host: kiali.kiali-operator.svc.cluster.local
            port:
              number: 20001
